<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_PMPS" Id="{44b61d96-5303-46af-ae15-c93941a18a66}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    {attribute 'pytmc' := 'pv: PLC:TXI:KFE:OPTICS:ARB:01'}
    fbArbiter1: FB_Arbiter(1);
    {attribute 'pytmc' := 'pv: PLC:TXI:KFE:OPTICS:ARB:02'}
    fbArbiter2: FB_Arbiter(2);
    {attribute 'pytmc' := 'pv: PLC:TXI:KFE:OPTICS:FFO:01'}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 1^Output'}
    fbFastFaultOutput1: FB_HardwareFFOutput := (bAutoReset := TRUE , i_sNetID:='172.21.42.126.1.1' );
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>